# libmml_egcas

./: .gitignore  CMakeLists.txt  COPYING  README.md  eg-mml.pro  qwt-mml.pro  qwt_mml_document.cpp  qwt_mml_document.h  qwt_mml_entity_table.cpp  qwt_mml_entity_table.h
basic-mml/: mfrac2_mod.mml  mfrac5_mod.mml
non_bmp_char_support/QUtfString/: QUtfString.pro
test/: CMakeLists.txt  formulaview.cpp  formulaview.h  main.cpp  mainwindow.cpp  mainwindow.h  test.pro
test/test/: test_basic_and_parenthesis.mml  test_basic_functions.mml  test_differentiate.mml  test_division.mml  test_empty_function.mml  test_matrix.mml  test_non_empty_function.mml  test_red_parenthesis.mml  test_variable_subscript.mml
w3-mml-testsuite/: problems.txt
